# polymarket-execution

./: .cursorignore  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/polymarket_execution/: __init__.py  cli.py  config.py  trader.py
src/polymarket_execution/utils/: logging.py
tests/: __init__.py  test_cli.py  test_config.py  test_trader.py
